[workspace]
resolver = "2"

members = [
    "spikes/update",
    "spikes/clickhouse-ingest"
    ]

[package]
name = "wikidumptools"
version = "0.0.1"
authors = ["Count Count <countvoncount123456@gmail.com>"]
edition = "2018"

[dependencies]
quick-xml = "0.22.0"
regex = "1"
clap = "3.0.0-beta.2"
memchr = "2.3.3"
termcolor = "1.1.2"
rayon = "1.3.1"
atty = "0.2.14"
thiserror = "1.0.20"
anyhow = "1.0"
reqwest = "0.11"
tokio = { version = "1.0", features = ["rt", "macros", "time", "signal", "process", "sync"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.9.1"
lazy_static = "1.4"
futures = { version = "0.3.13", features = [ "thread-pool" ] }
scopeguard = "1.1.0"
num_cpus = "1.13.0"

[dependencies.snmalloc-rs]
version = "0.2.24"
features = [] # stats, debug, ...

[patch.crates-io]
termcolor = { version = "1.1.2", git = "https://github.com/Count-Count/termcolor.git", branch="windows-utf8-console-bug-workaround" }

[profile.release]
#debug = "yes" # for profiling

# minimize size of binaries
#lto = "yes"
#codegen-units = 1
#opt-level = 'z' # possible s or 3 instead (benchmark!)
#panic = 'abort'
