[workspace]
members = [
    "wdgetlib",
    "spikes/update",
    "spikes/clickhouse-ingest"
    ]

[package]
name = "wikidumptools"
version = "0.0.1"
authors = ["Count Count <countvoncount123456@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
wdgetlib = { version = "0.0.1", path = "wdgetlib/" }
quick-xml = "0.22.0"
regex = "1"
clap = { version = "3.0.13", features = ["cargo"] }
memchr = "2.3.3"
termcolor = "1.1.2"
rayon = "1.5.1"
atty = "0.2.14"
thiserror = "1.0.30"
anyhow = "1.0"
reqwest = "0.11"
tokio = { version = "1.13", features = ["rt", "macros", "time", "signal", "process", "sync"] }
sha-1 = "0.10.0"
lazy_static = "1.4"
tabwriter = "1.2.1"
simdutf8 = "0.1.1"
mimalloc = "0.1.26"

[patch.crates-io]
termcolor = { version = "1.1.2", git = "https://github.com/Count-Count/termcolor.git", branch="windows-utf8-console-bug-workaround" }

[profile.release]
#debug = "yes" # for profiling

# minimize size of binaries
#lto = "yes"
#codegen-units = 1
#opt-level = 'z' # possible s or 3 instead (benchmark!)
#panic = 'abort'
