[package]
name = "wikidumpget"
version = "0.1.0"
authors = ["Count Count <countvoncount123456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
termcolor = "1.1"
atty = "0.2.14"
reqwest = "0.10.7"
tokio = { version = "0.2", features = ["rt-core", "macros", "time", "signal"] }
thiserror = "1.0.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
sha-1 = "0.9.1"
lazy_static = "1.4"