[package]
name = "wdgetlib"
version = "0.0.1"
authors = ["Count Count <countvoncount123456@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thiserror = "1.0.36"
reqwest = "0.11"
tokio = { version = "1.16", features = ["macros", "process"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.10.0"
lazy_static = "1.4"
futures = "0.3.13"
scopeguard = "1.1.0"
num_cpus = "1.13.0"
bzip2 = "0.4"
bytes = "1.0.1"
