[package]
name = "wikidumpgrep"
version = "0.1.0"
authors = ["Count Count"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.21.0"
regex = "1"
clap = "3.0.0-beta.2"
memchr = "2.3.3"
termcolor = "1.1"
rayon = "1.3.1"
atty = "0.2.14"
thiserror = "1.0.20"

[dependencies.snmalloc-rs]
version = "0.2.24"
features = [] # stats, debug, ...

[dev-dependencies]
criterion = "0.3"
bzip2 = "0.4.2"
slice = "0.0.4"

[[bench]]
name = "bench"
harness = false
