[package]
name = "clickhouse-ingest"
version = "0.1.0"
authors = ["Count Count <countvoncount123456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clickhouse-rs = "1.0.0-alpha.1"
#clickhouse-rs = { path = "../../../clickhouse-rs", version = "0.2.0-alpha.5" }
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.20", features = [ "serialize" ] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.8"
chrono = "0.4"
chrono-tz = "0.5"
[dependencies.snmalloc-rs]
version = "0.2.24"
features = [] # stats, debug, ...
