[package]
name = "clickhouse-ingest"
version = "0.0.1"
authors = ["Count Count <countvoncount123456@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
#clickhouse-rs = "1.0.0-alpha.1"
clickhouse-rs = { git = "https://github.com/Count-Count/clickhouse-rs.git", branch = "chrono-no-oldtime" }
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
tokio = { version = "1.13", features = ["full"] }
env_logger = "0.9.0"
chrono = { version = "0.4", default-features = false, features = [ "std" ] }
chrono-tz = "0.5"
mimalloc = "0.1.26"