[package]
name = "dump-update-spike"
version = "0.1.0"
authors = ["Count Count <countvoncount123456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros", "time", "signal"] }
thiserror = "1.0.20"
mediawiki = "0.2.3"
